uprava controller + html